[gd_scene load_steps=4 format=3 uid="uid://jtks6fdmpap6"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_3cbe2"]
[ext_resource type="Resource" uid="uid://cfbsynjsw6ejt" path="res://resources/GameStats.tres" id="2_4ur4q"]
[ext_resource type="PackedScene" uid="uid://bpaum5m4hpce5" path="res://scenes/OptionsMenu.tscn" id="5_osjo6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3cbe2")
game_stats = ExtResource("2_4ur4q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.69682, 1, 0.995453, 1)

[node name="MenuOptionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.5
offset_top = -156.5
offset_right = 215.5
offset_bottom = 156.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="MenuOptionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Baking Frenzy"

[node name="PlayButton" type="Button" parent="MenuOptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "PLAY"

[node name="OptionsButton" type="Button" parent="MenuOptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "OPTIONS
"

[node name="QuitButton" type="Button" parent="MenuOptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "QUIT
"

[node name="OptionsMenu" parent="." instance=ExtResource("5_osjo6")]
layout_mode = 1

[connection signal="pressed" from="MenuOptionsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuOptionsContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuOptionsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="display_main_menu" from="OptionsMenu" to="." method="_on_options_menu_display_main_menu"]
